Today's pracice in FCC :- completed with HTML part and most part of styling

--- a/Quiz site/index.html
+++ b/Quiz site/index.html
@@ -33,7 +33,7 @@
         action="https://freecodecamp.org/practice-project/accessibility-quiz"
       >
         <section role="region" aria-labelledby="student-info">
-          <h2 id="student-info">student-info</h2>
+          <h2 id="student-info">Student info</h2>
           <div class="info">
             <label for="stud-name">Name: </label
             ><input type="text" id="stud-name" name="stud-name" />
@@ -52,7 +52,7 @@
         </section>
 
         <section role="region" aria-labelledby="html-questions">
-          <h2 id="html-questions">html-questions</h2>
+          <h2 id="html-questions">Html questions</h2>
           <div class="question-block">
             <p>1</p>
             <fieldset class="question" name="html-question-one">
@@ -102,7 +102,7 @@
         </section>
 
         <section role="region" aria-labelledby="css-questions">
-          <h2 id="css-questions">css-questions</h2>
+          <h2 id="css-questions">CSS questions</h2>
           <div class="formrow">
             <div class="question-block">
               <label for="s1">question-1</label>
@@ -132,5 +132,13 @@
         <input type="submit" value="Submit" />
       </form>
     </main>
+    <footer>
+      <address>
+        <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+        San Francisco<br />
+        California<br />
+        USA
+      </address>
+    </footer>
   </body>
 </html>
