--- a/Picasso Painting/index.html
+++ b/Picasso Painting/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="utf-8" />
+    <title>Picasso Painting</title>
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     />
-    <title>Picasso</title>
   </head>
   <body>
     <div id="back-wall"></div>
@@ -40,6 +38,56 @@
           <i class="fas fa-music"></i>
           <i class="fas fa-music"></i>
           <i class="fas fa-music"></i>
+        </div>
+      </div>
+      <div class="blue" id="blue-left"></div>
+      <div class="blue" id="blue-right"></div>
+      <div id="orange-character">
+        <div id="black-round-hat"></div>
+        <div id="eyes-div">
+          <div class="eyes left"></div>
+          <div class="eyes right"></div>
+        </div>
+        <div id="triangles">
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+          <div class="triangle"></div>
+        </div>
+        <div id="guitar">
+          <div class="guitar" id="guitar-left">
+            <i class="fas fa-bars"></i>
+          </div>
+          <div class="guitar" id="guitar-right">
+            <i class="fas fa-bars"></i>
+          </div>
+          <div id="guitar-neck"></div>
         </div>
       </div>
     </div>
