--- a/CSS Grid/index.html
+++ b/CSS Grid/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magazine</title>
-    <link rel="stylesheet" href="styles.css" />
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
@@ -22,8 +21,8 @@
           <img
             src="https://cdn.freecodecamp.org/platform/universal/fcc_meta_1920X1080-indigo.png"
             alt="freecodecamp logo"
-            class="hero-img"
             loading="lazy"
+            class="hero-img"
           />
           <h1 class="hero-title">OUR NEW CURRICULUM</h1>
           <p class="hero-subtitle">
@@ -33,28 +32,29 @@
         </header>
         <div class="author">
           <p class="author-name">
+            By
             <a href="https://freecodecamp.org" target="_blank" rel="noreferrer"
-              >By freeCodeCamp</a
+              >freeCodeCamp</a
             >
           </p>
           <p class="publish-date">March 7, 2019</p>
         </div>
         <div class="social-icons">
-          <a href="https://www.facebook.com/freecodecamp"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-          <a href="https://twitter.com/freecodecamp"
-            ><i class="fab fa-twitter"></i
-          ></a>
-          <a href="https://instagram.com/freecodecamp"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://www.linkedin.com/school/free-code-camp"
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
-          <a href="https://www.youtube.com/freecodecamp"
-            ><i class="fab fa-youtube"></i
-          ></a>
+          <a href="https://www.facebook.com/freecodecamp/">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com/freecodecamp/">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://instagram.com/freecodecamp">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/school/free-code-camp/">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://www.youtube.com/freecodecamp">
+            <i class="fab fa-youtube"></i>
+          </a>
         </div>
       </section>
       <section class="text">
@@ -164,11 +164,12 @@
           <img
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
             alt="image of the quote machine project"
-            class="image-1"
             loading="lazy"
+            class="image-1"
             width="600"
             height="400"
-          /><img
+          />
+          <img
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
             alt="image of a calculator project"
             loading="lazy"
